feat: menambahkan variable global string untuk id nama

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="prodi">Teknologi Informasi</string>
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
     <string name="nama">Bambang Sumantri</string>
-    <string name="alamat">Turi, Sleman</string>
+    <string name="nama2">Lu'lu' Luthfiah</string>
+    <string name="nama3">Hana Latifah</string>
     <string name="copy">copyright, 2025</string>
 </resources>
