--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="nama">Bambang Sumantri</string>
     <string name="nama2">Lu'lu' Luthfiah</string>
     <string name="nama3">Hana Latifah</string>
+    <string name="alamat">Turi, Sleman</string>
+    <string name="alamat2">Depok, Sleman</string>
+    <string name="alamat3">Kasihan, Bantul</string>
     <string name="copy">copyright, 2025</string>
 </resources>
