--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="alamat">Turi, Sleman</string>
     <string name="alamat2">Depok, Sleman</string>
     <string name="alamat3">Kasihan, Bantul</string>
+    <string name="notelp">081324992828</string>
+    <string name="notelp2">089912787253</string>
     <string name="copy">copyright, 2025</string>
 </resources>
