fix: memperbaiki apostrope pada string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="prodi">Teknologi Informasi</string>
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
     <string name="nama">Bambang Sumantri</string>
-    <string name="nama2">Lu'lu' Luthfiah</string>
+    <string name="nama2">Lu\'lu\' Luthfiah</string>
     <string name="nama3">Hana Latifah</string>
     <string name="alamat">Turi, Sleman</string>
     <string name="alamat2">Depok, Sleman</string>
